syntax = "proto2";

package neuro.messages.config;

import "common.proto";
import "messages.proto";

message Logs {
  enum Severity {
    trace = 0;
    debug = 1;
    info = 2;
    warning = 3;
    error = 4;
    fatal = 5;
  }
  
  optional string file_path = 1;
  optional uint32 rotation_size = 2 [default = 10];
  optional Severity severity = 3 [default = warning];
  optional bool to_stdout = 4;
}

message Tcp {
  required uint32 listen_port = 1;
  repeated Peer peers = 4;
}

message Networking {
  optional uint32 max_connections = 1;
  optional Tcp tcp = 2;
}

message Config {
  enum NextSelectionMethod {
    SIMPLE = 0;
    PING = 1;
    RANDOM = 2;
  }

  optional string key_pub_path = 1;
  optional string key_priv_path = 2;
  optional Logs logs = 3;
  required Networking networking = 4;
  optional Peer.Status keep_status = 5 [default = CONNECTED]; 
  optional NextSelectionMethod selection_method = 6 [default = SIMPLE];
}